title spacing fix

--- a/_sass/_components/post-list.scss
+++ b/_sass/_components/post-list.scss
@@ -12,6 +12,7 @@
     a {
       color: $color-base;
       text-decoration: none;
+      line-height: 1.3;
     }
 
     + .post-byline {
