--- a/_sass/_core/typography.scss
+++ b/_sass/_core/typography.scss
@@ -29,6 +29,7 @@ h4,
 h5,
 h6 {
   font-family: $font-sans;
+  line-height: 1.3;
 }
 
 h4 {
